--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-  go-proxy-bingai:
+  docker-firefox:
     # 镜像名称
-    image: adams549659584/go-proxy-bingai
+    image: jlesage/docker-firefox
     # 容器名称
-    container_name: go-proxy-bingai  
+    container_name: jlesage  
     # 自启动
     restart: unless-stopped
     ports:
-      - 8080:8080
+      - 5800:5800
